# AI_Reader

./: .gitignore  .release-notes-v0.2.0.md  .release-notes-v0.2.1.md  .release-notes-v0.2.2.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  AZW3_HUFF_HANDOFF.md  DATA_MODEL.md  DEVELOPMENT.md  FEATURES.md  IPC.md  USAGE.md  wechat-ai-reader-article.html  wechat-ai-reader-article.md
docs/plans/: 2026-05-22-reader-bookmarks-paging-douban.md
scripts/: copy-pdfjs-assets.mjs  download-embed-model.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  export.rs  lib.rs  main.rs  secrets.rs  state.rs
src-tauri/src/ai/: chat.rs  chunker.rs  embed.rs  index.rs  mod.rs  recommend.rs
src-tauri/src/music/: mod.rs  ncm.rs  scanner.rs  tagger.rs
src-tauri/src/readers/: docx.rs  epub.rs  mobi.rs  mod.rs  pdf.rs  sanitize.rs  txt.rs
src/assets/ui-style-a/: manifest.json
src/components/shell/: AppSidebar.tsx
src/features/bookmarks/: GlobalBookmarksPanel.tsx
src/features/calendar/: ReadingCalendar.tsx
src/features/command-palette/: CommandPalette.tsx  commandMatch.ts  useCommandPalette.ts
src/features/help/: HelpPanel.tsx
src/features/music/: LyricsPanel.tsx  MusicMiniPlayer.tsx  MusicPlayerContext.tsx  MusicView.tsx
src/features/notes/: NotesView.tsx  markdown.ts
src/features/reader/: AnnotationsPanel.tsx  BookSearch.tsx  BookmarksPanel.tsx  ChapterEntitiesPanel.tsx  ChatPanel.tsx  EpubView.tsx  HighlightPopover.tsx  LookupBubble.tsx  MusicSuggestPanel.tsx  PdfView.tsx  ReaderSettings.tsx  TocPanel.tsx  entityUnderlines.ts  highlight.ts  progressAnchor.ts  useBookmarksPanel.ts  useChapterEntities.ts  useFullscreen.ts  useReadTimeHeartbeat.ts  useReaderKeybindings.ts  useReaderSettings.ts  useReadingProgress.ts  useSelectionPopover.ts
src/features/search/: FullTextSearch.tsx
src/features/settings/: GlobalAiSettingsPanel.tsx
src/features/stats/: BarChart30Days.tsx  StatsView.tsx
src/lib/: ipc.ts
