[package]
name = "aireader"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aireader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
epub = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
encoding_rs = "0.8"
chardetng = "0.1"
docx-rs = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
fastembed = "4"
ncmdump = "0.7"
futures-util = "0.3"
mobi = "0.8"
notify = "8"
notify-debouncer-full = "0.7"
base64 = "0.22"
pdf-extract = "0.10.0"

# Use a locally-patched fork of `mobi` 0.8 (see vendor/mobi-rs).
# The upstream crate panics on real-world MOBI files when record offsets
# are non-monotonic — see vendor/mobi-rs/src/record.rs comment for the
# specific fix.
[patch.crates-io]
mobi = { path = "vendor/mobi-rs" }

